# alerts-pipeline

./: .gitignore  README.md  claude.md  docker-compose.override.yml  pyproject.toml
config/: airflow.cfg
dags/: alerts_consumer.py  alerts_producer.py  assets.py  config.py
dags/operators/: __init__.py  bq_operator.py  gcs_operators.py  oref_operator.py
dbt/: Dockerfile  dbt_project.yml
dbt/models/marts/: fct_alerts.sql
dbt/models/staging/alarms/: _src_alarms.yml  _stg_alarms.yml  stg_alarms__alarms.sql
dbt/models/staging/cities/: _stg_cities.yml  stg_cities__cities.sql
dbt/seeds/: _seeds_cities.yml  cities.csv
scraping/: historical_alerts.csv  scrape_historical_alerts.py
streamlit/: Dockerfile  app.py  requirements.txt
terraform/: .terraform.tfstate.lock.info  bigquery.tf  iam.tf  main.tf  outputs.tf  storage.tf  variables.tf
